--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,278 +1,227 @@
-.main {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
+.hero_section_img{
+    background-image: url("../public/home/hero_iphone15pro.jpg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding: 150px 0;
+}
+#hero_section #hero_content{
+    padding-bottom: 150px;
+}
+#hero_content h1{
+    color: var(--second-color);
+    font-size: 60px;
+}
+#hero_content h4{
+    color: var(--second-color);
+}
+#hero_content p{
+    color: var(--second-color);
 }
 
-.description {
-  display: inherit;
-  justify-content: inherit;
-  align-items: inherit;
-  font-size: 0.85rem;
-  max-width: var(--max-width);
-  width: 100%;
-  z-index: 2;
-  font-family: var(--font-mono);
+.second_section_img{
+    background-image: url("../public/home/second.jpg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding: 100px 0;
+}
+#second_section #second_content{
+    padding-bottom: 180px;
+}
+#second_content h2{
+    color: var(--first-color);
+    font-size: 60px;
+}
+#second_content h4{
+    color: var(--first-color);
+}
+#second_content p{
+    color: var(--first-color);
 }
 
-.description a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 0.5rem;
+.third_section_img{
+    background-image: url("../public/home/third.jpg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding: 100px 0;
+}
+#third_section #third_content{
+    padding-bottom: 250px;
+}
+#third_content h2{
+    color: var(--second-color);
+    font-size: 60px;
+}
+#third_content h3{
+    color: var(--red-color);
+}
+#third_content h4{
+    color: var(--second-color);
+}
+#third_content p{
+    color: var(--second-color);
 }
 
-.description p {
-  position: relative;
-  margin: 0;
-  padding: 1rem;
-  background-color: rgba(var(--callout-rgb), 0.5);
-  border: 1px solid rgba(var(--callout-border-rgb), 0.3);
-  border-radius: var(--border-radius);
+#forth_section{
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
-.code {
-  font-weight: 700;
-  font-family: var(--font-mono);
+.forth_section_one_img{
+    background-image: url("../public/home/forth1.jpg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding: 100px 0;
+    height: 100vh;
+}
+#forth_section_one #forth_content_one{
+    padding-bottom: 250px;
+}
+#forth_content_one h2{
+    color: var(--first-color);
+    font-size: 40px;
+}
+#forth_content_one h5{
+    color: var(--red-color);
+}
+#forth_content_one h4{
+    color: var(--first-color);
+}
+#forth_content_one p{
+    color: var(--first-color);
+}
+.forth_section_two_img{
+    background-image: url("../public/home/forth2.jpg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding: 100px 0;
+    height: 100vh;
+}
+#forth_section_two #forth_content_two{
+    padding-bottom: 250px;
+}
+#forth_content_two h2{
+    color: var(--first-color);
+    font-size: 40px;
+}
+#forth_content_two h5{
+    color: var(--red-color);
+}
+#forth_content_two h4{
+    color: var(--first-color);
+}
+#forth_content_two p{
+    color: var(--first-color);
 }
 
-.grid {
-  display: grid;
-  grid-template-columns: repeat(4, minmax(25%, auto));
-  width: var(--max-width);
-  max-width: 100%;
+#fifth_section{
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
-.card {
-  padding: 1rem 1.2rem;
-  border-radius: var(--border-radius);
-  background: rgba(var(--card-rgb), 0);
-  border: 1px solid rgba(var(--card-border-rgb), 0);
-  transition: background 200ms, border 200ms;
+.fifth_section_one_img{
+    background-image: url("../public/home/fifth1.jpg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding: 100px 0;
+    height: 100vh;
+}
+#fifth_section_one #fifth_content_one{
+    padding-bottom: 250px;
+}
+#fifth_content_one h2{
+    color: var(--first-color);
+    font-size: 40px;
+}
+#fifth_content_one h5{
+    color: var(--red-color);
+}
+#fifth_content_one h4{
+    color: var(--first-color);
+}
+#fifth_content_one p{
+    color: var(--first-color);
+}
+.fifth_section_two_img{
+    background-image: url("../public/home/forth1.jpg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding: 100px 0;
+    height: 100vh;
+}
+#fifth_section_two #fifth_content_two{
+    padding-bottom: 250px;
+}
+#fifth_content_two h2{
+    color: var(--first-color);
+    font-size: 40px;
+}
+#fifth_content_two h5{
+    color: var(--red-color);
+}
+#fifth_content_two h4{
+    color: var(--first-color);
+}
+#fifth_content_two p{
+    color: var(--first-color);
 }
 
-.card span {
-  display: inline-block;
-  transition: transform 200ms;
+#sixth_section{
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
-.card h2 {
-  font-weight: 600;
-  margin-bottom: 0.7rem;
+.sixth_section_one_img{
+    background-image: url("../public/home/sixth1.jpg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding: 100px 0;
+    height: 100vh;
 }
-
-.card p {
-  margin: 0;
-  opacity: 0.6;
-  font-size: 0.9rem;
-  line-height: 1.5;
-  max-width: 30ch;
+#sixth_section_one #sixth_content_one{
+    padding-bottom: 250px;
 }
-
-.center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  padding: 4rem 0;
+#sixth_content_one h2{
+    color: var(--first-color);
+    font-size: 40px;
 }
-
-.center::before {
-  background: var(--secondary-glow);
-  border-radius: 50%;
-  width: 480px;
-  height: 360px;
-  margin-left: -400px;
+#sixth_content_one h5{
+    color: var(--red-color);
 }
-
-.center::after {
-  background: var(--primary-glow);
-  width: 240px;
-  height: 180px;
-  z-index: -1;
+#sixth_content_one h4{
+    color: var(--first-color);
 }
-
-.center::before,
-.center::after {
-  content: '';
-  left: 50%;
-  position: absolute;
-  filter: blur(45px);
-  transform: translateZ(0);
+#sixth_content_one p{
+    color: var(--first-color);
 }
-
-.logo,
-.thirteen {
-  position: relative;
+.sixth_section_two_img{
+    background-image: url("../public/home/sixth2.jpg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding: 100px 0;
+    height: 100vh;
 }
-
-.thirteen {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 75px;
-  height: 75px;
-  padding: 25px 10px;
-  margin-left: 16px;
-  transform: translateZ(0);
-  border-radius: var(--border-radius);
-  overflow: hidden;
-  box-shadow: 0px 2px 8px -1px #0000001a;
+#sixth_section_two #sixth_content_two{
+    padding-bottom: 250px;
 }
-
-.thirteen::before,
-.thirteen::after {
-  content: '';
-  position: absolute;
-  z-index: -1;
+#sixth_content_two h2{
+    color: var(--first-color);
+    font-size: 40px;
 }
-
-/* Conic Gradient Animation */
-.thirteen::before {
-  animation: 6s rotate linear infinite;
-  width: 200%;
-  height: 200%;
-  background: var(--tile-border);
+#sixth_content_two h5{
+    color: var(--red-color);
 }
-
-/* Inner Square */
-.thirteen::after {
-  inset: 0;
-  padding: 1px;
-  border-radius: var(--border-radius);
-  background: linear-gradient(
-    to bottom right,
-    rgba(var(--tile-start-rgb), 1),
-    rgba(var(--tile-end-rgb), 1)
-  );
-  background-clip: content-box;
+#sixth_content_two h4{
+    color: var(--first-color);
 }
-
-/* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
-  .card:hover {
-    background: rgba(var(--card-rgb), 0.1);
-    border: 1px solid rgba(var(--card-border-rgb), 0.15);
-  }
-
-  .card:hover span {
-    transform: translateX(4px);
-  }
-}
-
-@media (prefers-reduced-motion) {
-  .thirteen::before {
-    animation: none;
-  }
-
-  .card:hover span {
-    transform: none;
-  }
-}
-
-/* Mobile */
-@media (max-width: 700px) {
-  .content {
-    padding: 4rem;
-  }
-
-  .grid {
-    grid-template-columns: 1fr;
-    margin-bottom: 120px;
-    max-width: 320px;
-    text-align: center;
-  }
-
-  .card {
-    padding: 1rem 2.5rem;
-  }
-
-  .card h2 {
-    margin-bottom: 0.5rem;
-  }
-
-  .center {
-    padding: 8rem 0 6rem;
-  }
-
-  .center::before {
-    transform: none;
-    height: 300px;
-  }
-
-  .description {
-    font-size: 0.8rem;
-  }
-
-  .description a {
-    padding: 1rem;
-  }
-
-  .description p,
-  .description div {
-    display: flex;
-    justify-content: center;
-    position: fixed;
-    width: 100%;
-  }
-
-  .description p {
-    align-items: center;
-    inset: 0 0 auto;
-    padding: 2rem 1rem 1.4rem;
-    border-radius: 0;
-    border: none;
-    border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25);
-    background: linear-gradient(
-      to bottom,
-      rgba(var(--background-start-rgb), 1),
-      rgba(var(--callout-rgb), 0.5)
-    );
-    background-clip: padding-box;
-    backdrop-filter: blur(24px);
-  }
-
-  .description div {
-    align-items: flex-end;
-    pointer-events: none;
-    inset: auto 0 0;
-    padding: 2rem;
-    height: 200px;
-    background: linear-gradient(
-      to bottom,
-      transparent 0%,
-      rgb(var(--background-end-rgb)) 40%
-    );
-    z-index: 1;
-  }
-}
-
-/* Tablet and Smaller Desktop */
-@media (min-width: 701px) and (max-width: 1120px) {
-  .grid {
-    grid-template-columns: repeat(2, 50%);
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-  .vercelLogo {
-    filter: invert(1);
-  }
-
-  .logo,
-  .thirteen img {
-    filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
-  }
-}
-
-@keyframes rotate {
-  from {
-    transform: rotate(360deg);
-  }
-  to {
-    transform: rotate(0deg);
-  }
+#sixth_content_two p{
+    color: var(--first-color);
 }
